--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -39,9 +39,18 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Manager') ?></a></li>
-                        <li><a href="<?php echo $this->url('zfcuser/login') ?>"><?php echo $this->translate('Login') ?></a></li>
+<?php
+  if (!$this->zfcUserIdentity()) { 
+?>
+                        <li><a href="<?php echo $this->url('zfcuser/login') ?>"><?php echo $this->translate('Log in') ?></a></li>
                         <li><a href="<?php echo $this->url('zfcuser/register') ?>"><?php echo $this->translate('Register') ?></a></li>
+<?php } else { ?>
+                        <li><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Overview') ?></a></li>
+                        <li><a href="<?php echo $this->url('notes') ?>"><?php echo $this->translate('Notes') ?></a></li>
+                        <li><a href="<?php echo $this->url('contacts') ?>"><?php echo $this->translate('Contacts') ?></a></li>
+                        <li><a href="<?php echo $this->url('calendar') ?>"><?php echo $this->translate('Calendar') ?></a></li>
+                        <li><a href="<?php echo $this->url('zfcuser/logout') ?>"><?php echo $this->translate('Log out') ?></a></li>
+<?php } ?>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
