--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -49,6 +49,7 @@
                         <li><a href="<?php echo $this->url('notes') ?>"><?php echo $this->translate('Notes') ?></a></li>
                         <li><a href="<?php echo $this->url('contacts') ?>"><?php echo $this->translate('Contacts') ?></a></li>
                         <li><a href="<?php echo $this->url('calendar') ?>"><?php echo $this->translate('Calendar') ?></a></li>
+                        <li><a href="<?php echo $this->url('zfcuser') ?>" class="gravatar profile-photo"><?php echo $this->gravatar($this->zfcUserIdentity()->getEmail()) ?></a></li>
                         <li><a href="<?php echo $this->url('zfcuser/logout') ?>"><?php echo $this->translate('Log out') ?></a></li>
 <?php } ?>
                     </ul>
