--- a/module/Calendar/view/calendar/index/index.phtml
+++ b/module/Calendar/view/calendar/index/index.phtml
@@ -1,4 +1,9 @@
 <?php 
-  $calendar = new \BmCalendar\Calendar();
-  echo $this->calendar($calendar)->showMonth(2014, 02);
+$title = 'My calendar';
+$this->headTitle($title);
+?>
+<h1><?php echo $this->escapeHtml($title); ?></h1>
+<?php
+$calendar = new \BmCalendar\Calendar();
+echo $this->calendar($calendar)->showMonth(2014, 02);
 
