--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,12 @@ body {
     padding-top: 60px;
     padding-bottom: 40px;
 }
-
+body > .container {
+  margin-top: 20px;
+}
 .zf-green {
     color: #68b604;
 }
-
 .btn-success {
   background-color: #57a900;
   background-image: -moz-linear-gradient(top, #70d900, #57a900);
@@ -17,7 +18,6 @@ body {
   background-image: linear-gradient(top, #70d900, #57a900);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70d900', endColorstr='#57a900', GradientType=0);
 }
-
 .btn-success:hover,
 .btn-success:active,
 .btn-success.active,
@@ -25,24 +25,38 @@ body {
 .btn-success[disabled] {
   background-color: #57a900;
 }
-
 .btn-success:active, .btn-success.active {
   background-color: #57a900;
 }
-
 div.container a.brand {
     background: url("../img/zf2-logo.png") no-repeat scroll 0 10px transparent;
     margin-left: 0;
     padding: 8px 20px 12px 40px;
 }
-
 .navbar-nav {
   float: right;
+}
+.navbar-brand {
+  padding: 20px !important;
 }
 .gravatar {
   float: left;
   padding-right: 15px;
 }
+.navbar-nav > li > a {
+  padding: 21px;
+}
 .gravatar img {
   border-radius: 50%;
+}
+.profile-photo {
+  padding: 10px !important;
+}
+.profile-photo img {
+  width: 45px;
+  transition: all 0.3s ease;
+}
+a.profile-photo:hover img {
+  border-top-right-radius: 0%;
+  box-shadow:0 0 0 4px #1abc9c;
 }
