--- a/module/Calendar/view/calendar/index/edit.phtml
+++ b/module/Calendar/view/calendar/index/edit.phtml
@@ -1,3 +1,4 @@
+<div class="form-control">
 <?php
     $title = 'Event#edit';
     $this->headTitle($title);
@@ -15,3 +16,5 @@
     )
 ));
     echo $this->renderForm($form);
+?>
+</div>
