--- a/module/Contacts/view/contacts/index/edit.phtml
+++ b/module/Contacts/view/contacts/index/edit.phtml
@@ -1,3 +1,4 @@
+<div class="form-control">
 <?php
     $title = 'Contact#edit';
     $this->headTitle($title);
@@ -14,3 +15,5 @@
     )
 ));
     echo $this->renderForm($form);
+?>
+</div>
