--- a/module/Profile/view/zfc-user/user/register.phtml
+++ b/module/Profile/view/zfc-user/user/register.phtml
@@ -1,3 +1,4 @@
+<div class="login-reg">
 <h1><?php echo $this->translate('Register'); ?></h1>
 
 <?php
@@ -12,13 +13,13 @@ $form->setAttribute('method', 'post');
 ?>
 
 <?php echo $this->form()->openTag($form) ?>
-    <dl class="zend_form">
+    <dl class="zend_form form-control">
     <?php foreach ($form as $element): ?>
         <?php if (!$element instanceof Zend\Form\Element\Button): ?>
             <dt><?php echo $this->formLabel($element) ?></dt>
         <?php endif ?>
         <?php if ($element instanceof Zend\Form\Element\Button): ?>
-            <dd><?php echo $this->formButton($element) ?></dd>
+            <div class="btn btn-block btn-lg btn-primary"><dd><?php echo $this->formButton($element) ?></dd></div>
         <?php elseif ($element instanceof Zend\Form\Element\Captcha): ?>
             <dd><?php echo $this->formCaptcha($element) . $this->formElementErrors($element) ?></dd>
         <?php else: ?>
@@ -30,3 +31,4 @@ $form->setAttribute('method', 'post');
         <input type="hidden" name="redirect" value="<?php echo $this->escapeHtml($this->redirect) ?>" />
     <?php endif ?>
 <?php echo $this->form()->closeTag() ?>
+</div>
