--- a/module/Calendar/view/calendar/index/add.phtml
+++ b/module/Calendar/view/calendar/index/add.phtml
@@ -1,3 +1,4 @@
+<div class="form-control">
 <?php
     $title = 'Event#add';
     $this->headTitle($title);
@@ -8,3 +9,5 @@
 <?php
     $form->setAttribute('action', $this->url('calendar', array('action' => 'add', 'date' => $date)));
     echo $this->renderForm($form);
+?>
+</div>
