--- a/module/Contacts/view/contacts/index/add.phtml
+++ b/module/Contacts/view/contacts/index/add.phtml
@@ -1,3 +1,4 @@
+<div class="form-control">
 <?php
     $title = 'Contact#add';
     $this->headTitle($title);
@@ -8,3 +9,5 @@
 <?php
     $form->setAttribute('action', $this->url('contacts', array('action' => 'add')));
     echo $this->renderForm($form);
+?>
+</div>
