--- a/module/Notes/view/notes/index/add.phtml
+++ b/module/Notes/view/notes/index/add.phtml
@@ -4,7 +4,9 @@
 ?>
 
 <h1><?php echo $this->escapeHtml($title); ?></h1>
-
+<div class="form-control">
 <?php
     $form->setAttribute('action', $this->url('notes', array('action' => 'add')));
     echo $this->renderForm($form);
+?>
+</div>
