--- a/module/Profile/view/zfc-user/user/login.phtml
+++ b/module/Profile/view/zfc-user/user/login.phtml
@@ -1,3 +1,4 @@
+<div class="login-reg">
 <h1><?php echo $this->translate('Sign In'); ?></h1>
 
 <?php
@@ -9,7 +10,7 @@ $form->setAttribute('method', 'post');
 
 <?php echo $this->form()->openTag($form) ?>
 
-    <dl class="zend_form">
+    <dl class="zend_form form-control">
         <?php echo $this->formElementErrors($form->get('identity')) ?>
 
         <dt><?php echo $this->formLabel($form->get('identity')) ?></dt>
@@ -22,11 +23,12 @@ $form->setAttribute('method', 'post');
             <input type="hidden" name="redirect" value="<?php echo $this->escapeHtml($this->redirect) ?>" />
         <?php endif ?>
 
-        <dd><?php echo $this->formButton($form->get('submit')) ?></dd>
+        <dd class="btn btn-block btn-lg btn-primary"><?php echo $this->formButton($form->get('submit')) ?></dd>
     </dl>
 
 <?php echo $this->form()->closeTag() ?>
 
 <?php if ($this->enableRegistration) : ?>
-<?php echo $this->translate('Not registered?'); ?> <a href="<?php echo $this->url('zfcuser/register') . ($this->redirect ? '?redirect='.$this->redirect : '') ?>"><?php echo $this->translate('Sign up!'); ?></a>
+<p style="text-align: center"><?php echo $this->translate('Not registered?'); ?> <a href="<?php echo $this->url('zfcuser/register') . ($this->redirect ? '?redirect='.$this->redirect : '') ?>"><?php echo $this->translate('Sign up!'); ?></a></p>
 <?php endif; ?>
+</div>
